[package]
name = "modurl_gym"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle", rev = "41a674c" }
modurl = { git = "https://github.com/ModuRL/ModuRL" }
tracing = { version = "0.1.37", optional = true }
log = { version = "0.4.28", optional = true }
box2d-rs = "0.0.4"
rand = "0.9.2"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
candle-core = { git = "https://github.com/huggingface/candle", rev = "41a674c" }

[features]
default = []
tracing = ["dep:tracing"]
logging = ["dep:log"]
